manifests/prod/pgadmin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deploy
  namespace: ip812
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin 
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.1.0
          ports:
            - containerPort: 80
              protocol: TCP
