manifests/prod/pgadmin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: ip812
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
